--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -55,6 +55,15 @@ events:
         website: https://chaoss.community/chaosscon-2020-eu/
         contact: linkgeorg@gmail.com
 
+    'FOSDEM PGDay 2020':
+        location: Brussels, BE
+        start: 2020-01-31
+        end: 2020-01-31
+        cost: €50
+        registration: Required
+        website: https://2020.fosdempgday.org/
+        contact: contact@fosdempgday.org
+
     'Learn to Code KiCad':
         location: Brussels, BE
         start: 2020-01-31
