Added links and stuff so it becomes hugely complex

--- a/content/stands-building.yaml
+++ b/content/stands-building.yaml
@@ -11,20 +11,38 @@ stand_list:
       stands:
         - theme: Operating Systems
           stands:
-          - CentOS
-          - Debian
-          - Gentoo Linux
-          - FreeBSD
-          - openSUSE
-          - openMandriva
-          - illumos
-          - Automotive Grade Linux
-          - Fedora Project
-          - Haiku (Saturday) - ReactOS (Sunday)
+            all:
+              - name: CentOS
+                url: https://centos.org/
+              - name: Debian
+                url: https://www.debian.org
+              - name: Gentoo Linux
+                url: https://www.gentoo.org/
+              - name: FreeBSD Project
+                url: https://www.freebsd.org/
+              - name: openSUSE Project
+                url: https://www.opensuse.org/
+              - name: OpenMandriva
+                url: https://github.com/OpenMandrivaAssociation
+              - name: illumos
+                url: https://illumos.org
+              - name: Automotive Grade Linux
+                url: https://www.automotivelinux.org/
+              - name: The Fedora Project
+                url: https://getfedora.org/
+            saturday:
+              - name: Haiku
+                url: https://www.haiku-os.org/
+            sunday:
+              - name: ReactOS
+                url: https://reactos.org
         - theme: Desktop Environments
           stands:
-          - KDE
-          - GNOME
+            all:
+              - name: KDE
+                url: https://kde.org/
+              - name: GNOME
+                url: https://www.gnome.org/
     - info:
         building: K
         floor: 1
@@ -33,16 +51,32 @@ stand_list:
       stands:
       - theme: Education
         stands:
-        - Coderdojo
-        - Skolelinux / BiscuIT / Teckids
-        - Linux Professional Institution (Saturday) - Open Source Design (Sunday)
-        - Sugar Labs (Saturday) - MIT App Inventor (Sunday)
+          all:
+            - name: Coderdojo
+              url: https://www.coderdojobelgium.be/fr
+            - name: Skolelinux / BiscuIT / Teckids
+              url: https://www.schul-frei.org
+          saturday:
+            - name: Linux Professional Institute
+              url: https://www.lpi.org/
+            - name: Sugar Labs
+              url: https://sugarlabs.org/
+          sunday:
+            - name: Open Source Design
+              url: http://opensourcedesign.net/
+            - name: MIT App Inventor
+              url: http://appinventor.mit.edu/
       - theme: Databases
         stands:
-        - PostgreSQL
-        - Percona
-        - YottaDB
-        - PostGraphile
+          all:
+            - name: PostgreSQL
+              url: https://www.postgresql.org/
+            - name: Percona
+              url: https://www.percona.com
+            - name: YottaDB
+              url: https://yottadb.com
+            - name: PostGraphile
+              url: https://graphile.org/postgraphile
     - info:
         building: K
         floor: 1
@@ -51,19 +85,35 @@ stand_list:
       stands:
       - theme: Programming Environment
         stands:
-        - Raku
-        - Javascript
-        - Eclipse Foundation
-        - Nuspell
-        - Integration Process Community
-        - AdoptOpenJDK (Saturday) - Pharo (Sunday)
+          all:
+            - name: Raku
+              url: https://raku.online
+            - name: Javascript
+              url: https://hackages.io/community
+            - name: Eclipse Foundation
+              url: https://www.eclipse.org
+            - name: Nuspell
+              url: https://nuspell.github.io
+            - name: Integration Process Community
+              url: https://syndesis.io/
+          saturday:
+            - name: AdoptOpenJDK
+              url: https://adoptopenjdk.net
+          sunday:
+            - name: Pharo
+              url: https://pharo.org/
       - theme: Gaming
         stands:
-        - 0 A.D.
-        - Godot Engine
+          all:
+            - name: 0 A.D.
+              url: https://play0ad.com
+            - name: Godot Engine
+              url: https://godotengine.org
       - theme: System Administration
         stands:
-        - GitLab
+          all:
+            - name: GitLab
+              url: https://about.gitlab.com/
  - name: K (level 2)
    map: map_k_2
    groups:
@@ -75,11 +125,23 @@ stand_list:
       stands:
       - theme: Community Advocacy
         stands:
-        - Apache Software Foundation
-        - Free Software Foundation Europe
-        - OW2 Open Source Community
-        - OpenUK (Saturday) - FOSSASIA (Sunday)
-        - Google Summer of Code (Saturday) - Software Freedom Conservancy (Sunday)
+          all:
+            - name: Apache Software Foundation
+              url: https://www.apache.org/
+            - name: Free Software Foundation Europe
+              url: https://fsfe.org/
+            - name: OW2 Open Source Community
+              url: http://www.ow2.org
+          saturday:
+            - name: OpenUK
+              url: https://openuk.uk/
+            - name: Google Summer of Code
+              url: https://g.co/gsoc
+          sunday:
+            - name: FOSSASIA
+              url: https://fossasia.org
+            - name: Software Freedom Conservancy, Inc.
+              url: https://sfconservancy.org/
     - info:
         building: K
         floor: 2
@@ -88,24 +150,52 @@ stand_list:
       stands:
       - theme: World Wide Web
         stands:
-        - Mozilla
-        - OWASP
-        - Realtime Lounge
-        - Matrix
-        - Mattermost
-        - wolfSSL
-        - Linphone
-        - Mautic (Saturday) - 3Box (Sunday)
+          all:
+            - name: Mozilla
+              url: https://www.mozilla.org
+            - name: OWASP
+              url: www.owasp.org
+            - name: Realtime Lounge
+              url: https://xmpp.org/
+            - name: Matrix
+              url: https://matrix.org
+            - name: Mattermost
+              url: https://www.mattermost.com
+            - name: wolfSSL
+              url: https://www.wolfssl.com/products/wolfssl/
+            - name: Linphone
+              url: https://www.linphone.org
+          saturday:
+            - name: Mautic
+              url: Https://www.mautic.org
+          sunday:
+            - name: 3Box
+              url: https://3box.io
       - theme: System Administration
         stands:
-        - OpenStack
-        - Jenkins
-        - oVirt & Foreman
-        - Grafana
-        - XCP-ng
-        - Kubevirt & Metal3
-        - Checkmk (Saturday) - Ntopng (Sunday)
-        - OpenTAP (Saturday) - Open Source Test Management (Sunday)
+          all:
+            - name: OpenStack Foundation
+              url: https://www.openstack.org/
+            - name: Jenkins
+              url: https://jenkins.io
+            - name: oVirt & Foreman
+              url: https://theforeman.org
+            - name: Grafana
+              url: https://www.grafana.com
+            - name: XCP-ng
+              url: https://xcp-ng.org/
+            - name: Kubevirt & Metal3
+              url: https://kubevirt.io
+          saturday:
+            - name: Checkmk
+              url: https://checkmk.com
+            - name: OpenTAP
+              url: https://www.opentap.io/
+          sunday:
+            - name: Ntopng
+              url: https://www.ntop.org
+            - name: Open Source Test Management
+              url: http://kiwitcms.org
  - name: AW
    map: map_aw
    groups:
@@ -117,10 +207,15 @@ stand_list:
       stands:
       - theme: Hardware
         stands:
-        - Coreboot + Flashrom + LinuxBoot
-        - Micropython & Espruino
-        - openWifi
-        - openHAB
+          all:
+            - name: Coreboot + Flashrom + LinuxBoot
+              url: https://coreboot.org/
+            - name: Micropython & Espruino
+              url: https://micropython.org
+            - name: openWifi
+              url: https://github.com/open-sdr/openwifi
+            - name: openHAB
+              url: https://www.openhab.org/
     - info:
         building: AW
         floor: 1
@@ -129,9 +224,17 @@ stand_list:
       stands:
       - theme: Hardware
         stands:
-        - OpenEmbedded
-        - Infobooth on amateur radio (HAM Radio)
-        - Technoethical (Saturday) - PINE64 (Sunday)
+          all:
+            - name: OpenEmbedded
+              url: http://www.openembedded.org
+            - name: Infobooth on amateur radio (HAM Radio)
+              url: https://www.uba.be/en
+          saturday:
+            - name: Technoethical
+              url: https://tehnoetic.com
+          sunday:
+            - name: PINE64
+              url: https://pine64.org
  - name: H
    map: map_h
    groups:
@@ -143,9 +246,17 @@ stand_list:
       stands:
       - theme: Office Software
         stands:
-        - LibreOffice
-        - Nextcloud
-        - Tine 2.0 (Saturday) - Tracim (Sunday)
+          all:
+            - name: LibreOffice
+              url: https://www.libreoffice.org
+            - name: Nextcloud, Davx & ONLYOFFICE
+              url: https://nextcloud.com
+          saturday:
+            - name: Tine 2.0
+              url: https://www.tine20.com/1/welcome-community/
+          sunday:
+            - name: Tracim
+              url: https://www.algoo.fr/fr/tracim
     - info:
         building: H
         floor: 1
@@ -154,6 +265,14 @@ stand_list:
       stands:
       - theme: Office Software
         stands:
-        - CiviCRM
-        - Kopano
-        - Musescore (Saturday) - Free Culture Podcasts (Sunday)
+          all:
+            - name: CiviCRM
+              url: https://civicrm.org
+            - name: Kopano
+              url: https://kopano.io/
+          saturday:
+            - name: Musescore
+              url: http://musescore.org/
+          sunday:
+            - name: Free Culture Podcasts
+              url: http://hackerpublicradio.org/foss-podcasts.php
