--- a/config.yaml
+++ b/config.yaml
@@ -174,10 +174,10 @@ pentabarf:
     height: 200
 
 keysigning:
-  submission_deadline: 2020-01-23
+  submission_deadline: 2020-01-22
   homework_due: 2020-04-30
   # Change these when the submission window opens/closes.
-  submission_notyet: true
+  submission_notyet: false
   submission_closed: false
   # Change this when the list of keys is published.
   list_published: false
