--- a/content/stands-building.yaml
+++ b/content/stands-building.yaml
@@ -90,8 +90,6 @@ stand_list:
               url: https://www.perl.org/
             - name: Javascript
               url: https://hackages.io/community
-            - name: Eclipse Foundation
-              url: https://www.eclipse.org
             - name: Nuspell
               url: https://nuspell.github.io
             - name: Integration Process Community
@@ -114,6 +112,11 @@ stand_list:
           all:
             - name: GitLab
               url: https://about.gitlab.com/
+      - theme: Community Advocacy
+        stands:
+          all:
+            - name: Eclipse Foundation
+              url: https://www.eclipse.org
  - name: K (level 2)
    map: map_k_2
    groups:
